# taskcli

./: .env.example  .gitignore  BECADOC.md  README.md  main.py  pyproject.toml
beca_work/: __init__.py  actions.py  client.py  config.py  runner.py
taskcli/: __init__.py  __main__.py  cli.py  config.py  errors.py  idempotency.py  models.py  provider.py
taskcli/providers/: __init__.py  beca.py  mock.py
tests/: test_cli_mock.py
